Bug 1001220 - [l10n][2.0] Merge test locales in Github for developers

--- a/apps/calendar/locales/calendar.zh-TW.properties
+++ b/apps/calendar/locales/calendar.zh-TW.properties
@@ -205,7 +205,7 @@ hour-allday=全天
 month-view-header-format=%Y 年 %b
 
 # In week view when displaying multiple months (weeks that span months).
-single-month-view-header-format=%b ~ 
+multi-month-view-header-format=%Y 年 %b
 
 # Header format used for in the day view.
 day-view-header-format=%b %e 日 %A
@@ -213,6 +213,7 @@ day-view-header-format=%b %e 日 %A
 #errors
 error-start-after-end=結束日期必須接續在開始日期之後
 error-unauthenticated=登入失敗，請檢查帳號密碼
+error-no-url=無法連線。請檢查你的 Wi-Fi 連線並再試一次。
 error-internal-server-error=伺服器錯誤。請確認帳號密碼是否正確並再試一次。
 error-default=發生錯誤，請稍後再試一次。
 error-offline=沒有網路連線。請檢查您的網路設定後再試一次。
@@ -220,6 +221,6 @@ error-account-exist=此帳號已存在
 
 # notification errors
 notification-error-sync-title=行事曆同步錯誤
-notification-error-sync-description=SD 卡
+notification-error-sync-description=點擊這裡取得更多資訊
 
 
