--- a/shared/locales/import_contacts/import_contacts.fr.properties
+++ b/shared/locales/import_contacts/import_contacts.fr.properties
@@ -1,5 +1,5 @@
 back              = Retour
-noSimMsg          = Pour importer des contacts, insérez ou débloquez votre carte SIM
+noSimMsg          = Pour importer des contacts, insérez ou déverouillez votre carte SIM
 noMemoryCardMsg   = Pour importer des contacts, insérez une carte mémoire
 importMemoryCard  = Carte mémoire
-noConnection11    = Pour importer vos amis Facebook ou vos contacts, connectez-vous à un réseau Wi-Fi ou à un réseau de données mobiles
+noConnection11    = Pour importer des contacts ou des amis Facebook, connectez-vous à un réseau Wi-Fi ou à un réseau de données mobiles
