--- a/apps/communications/contacts/locales/fb/facebook.ar.properties
+++ b/apps/communications/contacts/locales/fb/facebook.ar.properties
@@ -2,7 +2,10 @@ close                  = إغلاق
 import                 = استيراد
 update                 = تحديث
 fbFriends              = اصدقاء الفيسبوك
+live-serviceName       = Outlook
+gmail-serviceName      = Gmail
 facebook-serviceName   = اصدقاء الفيسبوك
+selectAll              = اختر الكل
 deselectAll            = إلغاء اختيار الكل
 viewAll                = عرض جميع اصدقاء الفيسبوك
 viewRecommend          = عرض الموصى به فقط
@@ -36,6 +39,7 @@ progressFB3UpdateTitle          = جارِ تحديث الاصدقاء في ال
 # Message
 message2       = ربما يتطلب عدة دقائق
 messageLinking = الرجاء الانتظار. جارِ ربط اصدقائك وجهات اتصالك
+messageCanceling = الرجاء الإنتظار. نحن نقوم بإلغاء العملية الجارية.
 
 
 # Errors
@@ -60,7 +64,11 @@ waitFriends      = انتظر، نقوم حاليا بالاتصال لجلب ق
 
 curtainCancel    = إلغاء
 curtainRetry     = محاولة مرة أخرى
+curtainOK        = موافق
 
+connectionLost       = لا يوجد اتصال بالانترنت
+connectionLostMsg    = صور الأصدقاء لن تضاف إلى جهات الاتصال , المواصلة على أي حال ؟
+yesOption            = موافق
 noOption             = إلغاء
 
 # Status
