--- a/apps/costcontrol/locales/costcontrol.fr.properties
+++ b/apps/costcontrol/locales/costcontrol.fr.properties
@@ -20,6 +20,8 @@ widget-authed-sim-heading = Nouvelle carte SIM {{provider}} insérée
 widget-authed-sim-meta = Appuyer pour suivre la conso. tél./Internet.
 widget-nonauthed-sim-heading = Nouvelle carte SIM insérée
 widget-nonauthed-sim-meta = Appuyer pour suivre la conso. Internet.
+widget-airplane-mode-heading = Mode avion
+widget-airplane-mode-meta = Désactivez le mode avion pour activer Suivi conso.
 widget-no-sim2-heading = Aucune carte SIM insérée
 widget-no-sim2-meta = Pour suivre la conso., insérez une SIM.
 widget-sim-locked-heading = Carte SIM verrouillée
@@ -95,7 +97,6 @@ prepaid = Prépayé
 postpaid = Paiement selon consommation
 phoneactivity = Appels téléphoniques
 short-date-format = %e %b
-telephony = Téléphonie
 sms-sent = SMS envoyés
 call-made = Appels passés
 settings = Paramètres
@@ -107,11 +108,8 @@ cancel = Annuler
 set = Définir
 set-day = Choisir le jour
 set-date = Choisir la date
-tracking-period-setup-title = Réinitialisation suivi
 monthly = Chaque mois
 weekly = Chaque semaine
-weekday-reset-setup-title = Choisir un jour pour début de période
-reset-monthday-setup-title = Choisir une date pour début de période
 monday = Lundi
 tuesday = Mardi
 wednesday = Mercredi
@@ -145,8 +143,6 @@ data-limit-alert = Alerte de conso. données
 data-limit-value2 = Me prévenir au-delà de
 data-limit-dialog-title2 = Saisir un niveau d’alerte pour les données mobiles
 data-limit-dialog-explanation2 = La vitesse de connexion est réduite au-delà de la limite. Vérifiez auprès de votre opérateur pour définir un niveau d’alerte approprié.
-3g-data-usage = Données 3G consommées
-3g-usage = Conso. 3G
 
 # LOCALIZATION NOTE (wifi-usage, mobile-usage): these strings are displayed in
 # the main window
@@ -158,30 +154,16 @@ mobile-usage = Conso. mobile
 wifi-usage-settings = Consommation Wi-Fi
 mobile-usage-settings = Consommation mobile
 
-select-plan-type = Type contrat
 im-prepaid = Prépayé
-im-prepaid-controle = Prépayé/Bloqué
 im-postpaid = Abonnement
-set-balance-reminders = Alertes de solde
-set-internet-report = Rapport et alertes Internet
-set-internet-reminders = Alertes Internet
-set-a-data-use-reminder = Alerte de conso. données
-set-data-report-and-reminder = Rapport et alerte pour les données
-set-internet-data-report = Rapport données Internet
 reset-data-usage = Réinitialiser les données
 reset-report = Réinitialiser le rapport
-reset-tracking = Réinitialiser le suivi
 next = Suivant
 back = Retour
 lets-go = C’est parti !
 alert = Alerte
 alert-limit = Niveau d’alerte
 fte-welcome-title = Bienvenue
-fte-welcome-message = Enregistrez l’activité de votre téléphone et des données.
-new-sim-inserted = Nouvelle SIM insérée
-new-sim-inserted-carrier = Nouvelle SIM {{carrier}} insérée
-new-sim-inserted-all-available = Configurer le rapport du téléphone et des données
-new-sim-inserted-only-data-available = Rapport du téléphone indisponible, configurer le rapport des données
 data-limit-notification-title2 = {{limit}} de données consommées
 data-limit-notification-text2 = Vous avez atteint la limite fixée
 low-balance-notification-title = Solde faible
